commented out unnecessary apis

--- a/APIDocumentation/cvp-dataset-en.html
+++ b/APIDocumentation/cvp-dataset-en.html
@@ -277,7 +277,7 @@
                                         </tr>
 
 
-                                        <tr>
+                                        <!--<tr>
                                             <td>Drug Name</td>
                                             <td>Dataset</td>
                                             <td>JSON</td>
@@ -295,7 +295,7 @@
                                             <td>
                                                 <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reportDrug/?lang=en&type=xml" target="_blank" title="Resource 1">Access</a>
                                             </td>
-                                           <!-- <td><a id="drugproductingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportDrug/?lang=en&type=xml', 'drugproductingredientEN')">Access</a></td>-->
+                                            <td><a id="drugproductingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportDrug/?lang=en&type=xml', 'drugproductingredientEN')">Access</a></td>
                                         </tr>
 
                                         <tr>
@@ -306,7 +306,7 @@
                                             <td>
                                                 <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=drugName&lang=en">Access</a>
                                             </td>
-                                        </tr>
+                                        </tr>-->
 
 
                                     </thead><!--Drug product ingredient-->
@@ -507,7 +507,7 @@
 
 
                                     <!--Report Info-->
-                                    <tr>
+                                    <!--<tr>
                                         <td>All Report Info</td>
                                         <td>Dataset</td>
                                         <td>JSON</td>
@@ -525,7 +525,7 @@
                                         <td>
                                             <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reportInfo/?lang=en&type=xml" target="_blank" title="Resource 1">Access</a>
                                         </td>
-                                       <!-- <td><a id="sourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportInfo/?lang=en&type=xml', 'sourceEN')">Access</a></td>-->
+                                        <td><a id="sourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportInfo/?lang=en&type=xml', 'sourceEN')">Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -536,7 +536,7 @@
                                         <td>
                                             <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=info&lang=en">Access</a>
                                         </td>
-                                    </tr>
+                                    </tr>-->
 
 
                                    
