--- a/APIDocumentation/cvp-dataset-fr.html
+++ b/APIDocumentation/cvp-dataset-fr.html
@@ -272,7 +272,7 @@
                                                 <th scope="col">Lien</th>
                                             </tr>
                                         </thead><!--Drug product ingredient-->
-                                        <tr>
+                                        <!--<tr>
                                             <td>Drug Name</td>
                                             <td>Dataset</td>
                                             <td>JSON</td>
@@ -290,7 +290,7 @@
                                             <td>
                                                 <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reportDrug/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
                                             </td>
-                                            <!--<td><a id="drugproductingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportDrug/?lang=fr&type=xml', 'drugproductingredientEN')">Accès</a></td>-->
+                                            <td><a id="drugproductingredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportDrug/?lang=fr&type=xml', 'drugproductingredientEN')">Accès</a></td>
                                         </tr>
 
                                         <tr>
@@ -301,10 +301,11 @@
                                             <td>
                                                 <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=drugName&lang=fr">Accès</a>
                                             </td>
-                                        </tr>
+                                        </tr>-->
 
 
-                                        </thead><!--Drug product ingredient-->
+
+                                        <!--Drug product ingredient-->
                                         <tr>
                                             <td>Drug product ingredient</td>
                                             <td>Dataset</td>
@@ -502,7 +503,7 @@
 
 
                                         <!--Report Info-->
-                                        <tr>
+                                        <!--<tr>
                                             <td>All Report Info</td>
                                             <td>Dataset</td>
                                             <td>JSON</td>
@@ -520,7 +521,7 @@
                                             <td>
                                                 <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/reportInfo/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
                                             </td>
-                                            <!--<td><a id="sourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportInfo/?lang=fr&type=xml', 'sourceEN')">Accès</a></td>-->
+                                            <td><a id="sourceEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cvp/api-v1/reportInfo/?lang=fr&type=xml', 'sourceEN')">Accès</a></td>
                                         </tr>
 
                                         <tr>
@@ -531,7 +532,7 @@
                                             <td>
                                                 <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/cvp/api-v1/CSV/DownloadCSV?dataType=info&lang=fr">Accès</a>
                                             </td>
-                                        </tr>
+                                        </tr>-->
 
 
 
