--- a/APIDocumentation/dpd-documentation-fr.html
+++ b/APIDocumentation/dpd-documentation-fr.html
@@ -197,7 +197,7 @@
                         <p>La BDPP contient des informations spécifiques sur les médicaments commercialisés au Canada. Cette base de données, administrée par la Direction des produits thérapeutiques, porte sur les produits à usages humains et vétérinaires, radio pharmaceutiques et désinfectants. Elle renferme environ 47 000 produits qui sont présentement approuvés, commercialisés, dormants ou annulés.</p>
                         <p>Les produits à usage humain, vétérinaire, désinfectants et ceux faisant partie de l'Annexe C (produits radiopharmaceutiques) seront disponibles dans la BDPP en ligne dès leur approbation, à l'exception des produits appartenant aux trois groupes de monographies listées dans la Partie C, Titre 1, du Règlement sur les Aliments et Drogues. Ces produits sont : les produits solaires (crèmes solaires, baumes à lèvres revendiquant un FPS, produits cosmétiques contenant un agent de protection solaire, etc...), les shampoings antipelliculaires et les désinfectants pour surfaces dures. Pour ces produits, dont les applications ont été soumises après le 15 juin 2015, il peut y avoir un délai de 6 mois,  après la date d'approbation, avant qu'ils n'apparaissent dans la BDPP en ligne.</p>
                         <p>Santé Canada est l'organisme fédéral qui réglemente les produits thérapeutiques et nous ne donnons pas de conseils médicaux sur l'utilisation des produits dans cette base de données. Pour de plus amples informations sur les choix de traitement, les choix de médicament et leurs utilisations, maladies, effets secondaires et interactions médicamenteuses, veuillez contacter votre professionnel de la santé.</p>
-                        <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON, XML et CSV afin de les utiliser dans leurs propres applications.</p>
+                        <p>Cette interface de programmation d'applications (API) permet aux concepteurs d'accéder à ces renseignements en format JSON et XML afin de les utiliser dans leurs propres applications.</p>
                         <p>L'adresse URI de base sur les produits pharmaceutiques est &nbsp;<a href="https://iis-dev.hres.ca/api-dpd/api/">https://iis-dev.hres.ca/api-dpd/api/</a>. Toute requête est effectuée par l'entremise de cette adresse URI.</p>
                     </section>
                     <section>
@@ -350,10 +350,10 @@
               Accept:&quot;application/json&quot;,
               dataType: 'json',
               success:function(data){
-                           console.log(data.drug_code);
+                           console.log(data.ingredient_name);
                            var frag = document.createDocumentFragment();
                            var h2 = document.createElement(&quot;h2&quot;);
-                           var DrugCode = document.createTextNode(data.drug_code);
+                           var Ingredient = document.createTextNode(data.ingredient_name);
                            var p = document.createElement(&quot;p&quot;);
                            var text = document.createTextNode(data.panels[0].text);
                            h2.appendChild(Ingredient);
@@ -928,8 +928,7 @@
                             </table>
                             <p>La liste des emballages par produit peut être accédée à l'adresse URI suivante :</p>
                             <ul>
-                                <li><a href="https://iis-dev.hres.ca/api-dpd/api/packaging/?lang=en&type=json">https://iis-dev.hres.ca/api-dpd/api/packaging/?lang=en&type=json</a></li>
-                                <li><a href="https://iis-dev.hres.ca/api-dpd/api/packaging/?lang=fr&type=json">https://iis-dev.hres.ca/api-dpd/api/packaging/?lang=fr&type=json</a></li>
+                                <li><a href="https://iis-dev.hres.ca/api-dpd/api/packaging/?type=json">https://iis-dev.hres.ca/api-dpd/api/packaging/?type=json</a></li>                                
                             </ul>
                         </section>
                         <section>
@@ -1049,10 +1048,9 @@
                                     <td>Détermine si le résultat est en format JSON ou XML.</td>
                                 </tr>
                             </table>
-                            <p>La liste des normes pharmaceutiques peut être accédée aux adresses URI suivantes :</p>
+                            <p>La liste des normes pharmaceutiques peut être accédée à l'adresse URI suivante :</p>
                             <ul>
-                                <li><a href="https://iis-dev.hres.ca/api-dpd/api/pharmaceuticalstd/?type=json">https://iis-dev.hres.ca/api-dpd/api/pharmaceuticalstd/?type=json</a></li>
-                                <li><a href="https://iis-dev.hres.ca/api-dpd/api/pharmaceuticalstd/?type=json">https://iis-dev.hres.ca/api-dpd/api/pharmaceuticalstd/?type=json</a></li>
+                                <li><a href="https://iis-dev.hres.ca/api-dpd/api/pharmaceuticalstd/?type=json">https://iis-dev.hres.ca/api-dpd/api/pharmaceuticalstd/?type=json</a></li>                                
                             </ul>
                         </section>
                         <section>
@@ -1093,7 +1091,7 @@
               Accept:&quot;application/json&quot;,
               dataType: 'json',
               success:function(data){
-                           console.log(data.package_type);
+                           console.log(data.pharmaceutical_std);
                            var frag = document.createDocumentFragment();
                            var h2 = document.createElement(&quot;h2&quot;);
                            var PharmaceuticalStd = document.createTextNode(data.pharmaceutical_std);
@@ -1528,10 +1526,10 @@
               Accept:&quot;application/json&quot;,
               dataType: 'json',
               success:function(data){
-                           console.log(data.status_name);
+                           console.log(data.status);
                            var frag = document.createDocumentFragment();
                            var h2 = document.createElement(&quot;h2&quot;);
-                           var StatusName = document.createTextNode(data.status_name);
+                           var StatusName = document.createTextNode(data.status);
                            var p = document.createElement(&quot;p&quot;);
                            var text = document.createTextNode(data.panels[0].text);
                            h2.appendChild(StatusName);
@@ -1660,10 +1658,10 @@
               Accept:&quot;application/json&quot;,
               dataType: 'json',
               success:function(data){
-                           console.log(data.TcAtcDescName);
+                           console.log(data.tc_atc);
                            var frag = document.createDocumentFragment();
                            var h2 = document.createElement(&quot;h2&quot;);
-                           var TcAtcDescName = document.createTextNode(data.TcAtcDescName);
+                           var TcAtcDescName = document.createTextNode(data.tc_atc);
                            var p = document.createElement(&quot;p&quot;);
                            var text = document.createTextNode(data.panels[0].text);
                            h2.appendChild(TcAtcDescName);
